oohhh it kinda works. So happy. user auth.

--- a/eLearningKids/views/login.pug
+++ b/eLearningKids/views/login.pug
@@ -4,12 +4,12 @@ block content
   h1= title
   p Welcome to #{title}
   p Please Log in to continue
-  form(method='POST' action='/users/register')
+  form(method='POST' action='/users')
     div.form-group
       label(for='username')
       input#name.form-control(type='text', placeholder='username' name='username')
     div.form-group
       label(for='password')
       input#name.form-control(type='password', placeholder='password' name='password')
-    button.btn.btn-primary(type='submit') Sign up
+    button.btn.btn-primary(type='submit') Sign in
 
